--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ test.name=TTTTT55556666
 spring.datasource.url=jdbc:mysql://localhost:3306/wiki
 spring.datasource.username=wikitest
 spring.datasource.password=Passw0rd
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # 配置mybatis所有mapper.xml所在的路径
