集成redis,登录成功后将登录信息放入redis中

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ mybatis.mapper-locations=classpath:/mapper/**/*.xml
 
 # 打印所有sql日志：sql、参数、结果
 logging.level.com.epra.wiki.mapper=trace
+
+# 配置redis
+spring.redis.host=r-uf6ljbcdaxobsifyctpd.redis.rds.aliyuncs.com
+spring.redis.port=6379
+spring.redis.password=Redis000
