增加定时任务，定时收集数据

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8880
 
 test.name=TTTTT55556666
 
-spring.datasource.url=jdbc:mysql://localhost:3306/wiki
+spring.datasource.url=jdbc:mysql://localhost:3306/wiki?allowMultiQueries=true
 spring.datasource.username=wikitest
 spring.datasource.password=Passw0rd
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
